Fix title wrapping

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -150,7 +150,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .page-heading {
-  font-size: $base-font-size * 3;
+  font-size: $base-font-size * 2.625;
   margin: 130px 0 110px 0;
   line-height: 1.3;
 }
